--- a/package.json
+++ b/package.json
@@ -20,20 +20,20 @@
     "maintained node versions"
   ],
   "devDependencies": {
-    "@babel/core": "^7.15.5",
-    "@babel/preset-env": "^7.15.4",
-    "@rollup/plugin-alias": "^3.1.8",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-node-resolve": "^13.0.4",
-    "@rollup/plugin-replace": "^3.0.0",
+    "@babel/core": "^7.17.10",
+    "@babel/preset-env": "^7.17.10",
+    "@rollup/plugin-alias": "^3.1.9",
+    "@rollup/plugin-babel": "^5.3.1",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@rollup/plugin-replace": "^4.0.0",
     "@rollup/plugin-strip": "^2.1.0",
-    "@vue/compiler-sfc": "^3.2.6",
-    "autoprefixer": "^10.3.1",
-    "node-sass": "^6.0.1",
+    "@vue/compiler-sfc": "^3.2.33",
+    "autoprefixer": "^10.4.7",
     "npm-run-all": "^4.1.5",
     "path": "^0.12.7",
-    "postcss": "^8.4.5",
-    "rollup": "^2.56.2",
+    "postcss": "^8.4.13",
+    "postcss-html": "^1.4.1",
+    "rollup": "^2.72.0",
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-livereload": "^2.0.5",
     "rollup-plugin-scss": "^3.0.0",
@@ -41,14 +41,17 @@
     "rollup-plugin-stylelint": "^1.0.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-vue": "^6.0.0",
+    "sass": "^1.51.0",
     "serve": "^12.0.0",
-    "sirv-cli": "^1.0.14",
-    "stylelint": "^13.13.1",
-    "stylelint-config-standard": "^22.0.0",
-    "stylelint-scss": "^3.20.1"
+    "sirv-cli": "^2.0.2",
+    "stylelint": "^14.8.2",
+    "stylelint-config-recommended-vue": "^1.4.0",
+    "stylelint-config-standard": "^25.0.0",
+    "stylelint-config-standard-scss": "^3.0.0",
+    "stylelint-scss": "^4.2.0"
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
-    "vue": "^3.2.7"
+    "vue": "^3.2.33"
   }
 }
