--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "@rollup/plugin-strip": "^2.1.0",
     "@vue/compiler-sfc": "^3.2.6",
     "autoprefixer": "^10.3.1",
-    "node-sass": "^6.0.1",
     "npm-run-all": "^4.1.5",
     "path": "^0.12.7",
     "postcss": "^8.4.5",
@@ -41,6 +40,7 @@
     "rollup-plugin-stylelint": "^1.0.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-vue": "^6.0.0",
+    "sass": "^1.51.0",
     "serve": "^12.0.0",
     "sirv-cli": "^1.0.14",
     "stylelint": "^13.13.1",
@@ -49,6 +49,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "hamburgers": "^1.2.1",
     "vue": "^3.2.7"
   }
 }
