--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "stylelint-scss": "^4.2.0"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.1.3",
     "hamburgers": "^1.2.1",
     "vue": "^3.2.33"
