--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.1.3",
     "hamburgers": "^1.2.1",
+    "lightgallery": "^2.4.0",
+    "swiper": "^8.1.5",
     "vue": "^3.2.33"
   }
 }
