--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "bootstrap": "^5.1.3",
     "gsap": "^3.10.4",
     "hamburgers": "^1.2.1",
-    "lightgallery": "^2.4.0",
+    "lightgallery.js": "^1.4.0",
     "swiper": "^8.1.5",
     "vue": "^3.2.33"
   }
