--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/preset-env": "^7.17.10",
     "@rollup/plugin-alias": "^3.1.9",
     "@rollup/plugin-babel": "^5.3.1",
+    "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-replace": "^4.0.0",
     "@rollup/plugin-strip": "^2.1.0",
@@ -31,9 +32,9 @@
     "autoprefixer": "^10.4.7",
     "npm-run-all": "^4.1.5",
     "path": "^0.12.7",
-    "postcss": "^8.4.13",
+    "postcss": "^8.4.14",
     "postcss-html": "^1.4.1",
-    "rollup": "^2.72.0",
+    "rollup": "^2.75.5",
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-livereload": "^2.0.5",
     "rollup-plugin-scss": "^3.0.0",
