--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "hamburgers": "^1.2.1",
     "lightgallery.js": "^1.4.0",
     "swiper": "^8.1.5",
-    "vue": "^3.2.33"
+    "vue": "^3.2.33",
+    "wowjs": "^1.1.3"
   }
 }
