--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.5",
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.1.3",
     "gsap": "^3.10.4",
     "hamburgers": "^1.2.1",
